// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Dropdown > renders basic case correctly 1`] = `
"<!-- eslint-disable-next-line vue/no-template-shadow -->
<div data-headlessui-state="">
  <div disabled="false" id="headlessui-menu-button-0" aria-haspopup="menu" aria-expanded="false" data-headlessui-state="" class="" role="button"><button> Open </button></div>
  <!--v-if-->
</div>"
`;

exports[`Dropdown > renders width disabled correctly 1`] = `
"<!-- eslint-disable-next-line vue/no-template-shadow -->
<div data-headlessui-state="">
  <div disabled="true" id="headlessui-menu-button-14" aria-haspopup="menu" aria-expanded="false" data-headlessui-state="" class="" role="button"><button disabled=""> Open </button></div>
  <!--v-if-->
</div>"
`;

exports[`Dropdown > renders width item slot correctly 1`] = `
"<!-- eslint-disable-next-line vue/no-template-shadow -->
<div data-headlessui-state="open">
  <div disabled="false" id="headlessui-menu-button-20" aria-haspopup="menu" class="" role="button" aria-expanded="true" data-headlessui-state="open" aria-controls="headlessui-menu-items-21"><button> Open </button></div>
  <div class="" style="position: fixed; left: auto; top: 0px; margin: 0px; right: 0px; bottom: auto; transform: translate(0px, 8px);" data-popper-placement="bottom-end">
    <transition-stub appear="true" persisted="false" css="true">
      <div>
        <!--v-if-->
        <div id="headlessui-menu-items-21" aria-labelledby="headlessui-menu-button-20" role="menu" tabindex="0" data-headlessui-state="open" class="">
          <div class="" role="none"><button class="group flex items-center gap-1.5 w-full" id="headlessui-menu-item-22" role="menuitem" data-headlessui-state="">
              <!--v-if--><span class=""></span>
              <!--v-if-->
            </button><button class="group flex items-center gap-1.5 w-full" id="headlessui-menu-item-23" role="menuitem" data-headlessui-state="">
              <!--v-if--><span class=""></span>
              <!--v-if-->
            </button><button class="group flex items-center gap-1.5 w-full" id="headlessui-menu-item-24" role="menuitem" data-headlessui-state="">
              <!--v-if--><span class=""></span>
              <!--v-if-->
            </button></div>
          <div class=""><button class="group flex items-center gap-1.5 w-full" id="headlessui-menu-item-25" role="menuitem" data-headlessui-state="">
              <!--v-if--><span class=""></span>
              <!--v-if-->
            </button><button class="group flex items-center gap-1.5 w-full" id="headlessui-menu-item-26" role="menuitem" data-headlessui-state="">
              <!--v-if--><span class=""></span>
              <!--v-if-->
            </button></div>
        </div>
      </div>
    </transition-stub>
  </div>
</div>"
`;

exports[`Dropdown > renders width slot correctly 1`] = `
"<!-- eslint-disable-next-line vue/no-template-shadow -->
<div data-headlessui-state="open">
  <div disabled="false" id="headlessui-menu-button-15" aria-haspopup="menu" class="" role="button" aria-expanded="true" data-headlessui-state="open" aria-controls="headlessui-menu-items-16">Open slot</div>
  <div class="" style="position: fixed; left: auto; top: 0px; margin: 0px; right: 0px; bottom: auto; transform: translate(0px, 8px);" data-popper-placement="bottom-end">
    <transition-stub appear="true" persisted="false" css="true">
      <div>
        <!--v-if-->
        <div id="headlessui-menu-items-16" aria-labelledby="headlessui-menu-button-15" role="menu" tabindex="0" data-headlessui-state="open" class="">
          <div class="" role="none"><button class="group flex items-center gap-1.5 w-full" id="headlessui-menu-item-17" role="menuitem" data-headlessui-state="">
              <!--v-if--><span class=""></span>
              <!--v-if-->
            </button></div>
          <div class=""><button class="group flex items-center gap-1.5 w-full" id="headlessui-menu-item-18" role="menuitem" data-headlessui-state="">
              <!--v-if--><span class=""></span>
              <!--v-if-->
            </button><button class="group flex items-center gap-1.5 w-full" id="headlessui-menu-item-19" role="menuitem" data-headlessui-state="">
              <!--v-if--><span class=""></span>
              <!--v-if-->
            </button></div>
        </div>
      </div>
    </transition-stub>
  </div>
</div>"
`;

exports[`Dropdown > renders with close correctly 1`] = `
"<!-- eslint-disable-next-line vue/no-template-shadow -->
<div data-headlessui-state="">
  <div disabled="false" id="headlessui-menu-button-9" aria-haspopup="menu" aria-expanded="false" data-headlessui-state="" class="" role="button"><button> Open </button></div>
  <!--v-if-->
</div>"
`;

exports[`Dropdown > renders with hover mode correctly 1`] = `
"<!-- eslint-disable-next-line vue/no-template-shadow -->
<div data-headlessui-state="open">
  <div disabled="false" id="headlessui-menu-button-10" aria-haspopup="menu" class="" role="button" aria-expanded="true" data-headlessui-state="open" aria-controls="headlessui-menu-items-11"><button> Open </button></div>
  <div class="" style="padding-top: 8px; padding-bottom: 8px; position: fixed; left: auto; top: 0px; margin: 0px; right: 0px; bottom: auto; transform: translate(0px, 0px);" data-popper-placement="bottom-end">
    <transition-stub appear="true" persisted="false" css="true">
      <div>
        <!--v-if-->
        <div id="headlessui-menu-items-11" aria-labelledby="headlessui-menu-button-10" role="menu" tabindex="0" data-headlessui-state="open" class="">
          <div class="" role="none"><button class="group flex items-center gap-1.5 w-full" id="headlessui-menu-item-12" role="menuitem" data-headlessui-state="">
              <!--v-if--><span class=""></span>
              <!--v-if-->
            </button></div>
          <div class=""><button class="group flex items-center gap-1.5 w-full" id="headlessui-menu-item-13" role="menuitem" data-headlessui-state="">
              <!--v-if--><span class=""></span>
              <!--v-if-->
            </button></div>
        </div>
      </div>
    </transition-stub>
  </div>
</div>"
`;

exports[`Dropdown > renders with items correctly 1`] = `
"<!-- eslint-disable-next-line vue/no-template-shadow -->
<div data-headlessui-state="open">
  <div disabled="false" id="headlessui-menu-button-1" aria-haspopup="menu" class="" role="button" aria-expanded="true" data-headlessui-state="open" aria-controls="headlessui-menu-items-2"><button> Open </button></div>
  <div class="" style="position: fixed; left: auto; top: 0px; margin: 0px; right: 0px; bottom: auto; transform: translate(0px, 8px);" data-popper-placement="bottom-end">
    <transition-stub appear="true" persisted="false" css="true">
      <div>
        <!--v-if-->
        <div id="headlessui-menu-items-2" aria-labelledby="headlessui-menu-button-1" role="menu" tabindex="0" data-headlessui-state="open" class="">
          <div class="" role="none"><button class="group flex items-center gap-1.5 w-full" id="headlessui-menu-item-3" role="menuitem" data-headlessui-state="">
              <!--v-if--><span class=""></span>
              <!--v-if-->
            </button></div>
          <div class=""><button class="group flex items-center gap-1.5 w-full" id="headlessui-menu-item-4" role="menuitem" data-headlessui-state="">
              <!--v-if--><span class=""></span>
              <!--v-if-->
            </button></div>
        </div>
      </div>
    </transition-stub>
  </div>
</div>"
`;

exports[`Dropdown > renders with open correctly 1`] = `
"<!-- eslint-disable-next-line vue/no-template-shadow -->
<div data-headlessui-state="open">
  <div disabled="false" id="headlessui-menu-button-5" aria-haspopup="menu" class="" role="button" aria-expanded="true" data-headlessui-state="open" aria-controls="headlessui-menu-items-6"><button> Open </button></div>
  <div class="" style="position: fixed; left: auto; top: 0px; margin: 0px; right: 0px; bottom: auto; transform: translate(0px, 8px);" data-popper-placement="bottom-end">
    <transition-stub appear="true" persisted="false" css="true">
      <div>
        <!--v-if-->
        <div id="headlessui-menu-items-6" aria-labelledby="headlessui-menu-button-5" role="menu" tabindex="0" data-headlessui-state="open" class="">
          <div class="" role="none"><button class="group flex items-center gap-1.5 w-full" id="headlessui-menu-item-7" role="menuitem" data-headlessui-state="">
              <!--v-if--><span class=""></span>
              <!--v-if-->
            </button></div>
          <div class=""><button class="group flex items-center gap-1.5 w-full" id="headlessui-menu-item-8" role="menuitem" data-headlessui-state="">
              <!--v-if--><span class=""></span>
              <!--v-if-->
            </button></div>
        </div>
      </div>
    </transition-stub>
  </div>
</div>"
`;
